Add search route
